intel/bench_214/extr_.FFmpeglibavfiltervf_curves.c_filter_slice_planar_with_main/log.txt
bench_214/extr_.FFmpeglibavfiltervf_curves.c_filter_slice_planar_with_main/extr_.FFmpeglibavfiltervf_curves.c_filter_slice_planar_with_main.c:37:23: error: cannot initialize a variable of type 'const ThreadData *' (aka 'const TYPE_7__ *') with an lvalue of type 'void *'
    const ThreadData *td = arg;
                      ^    ~~~
1 error generated.
HLS FPGA Parse FAILED.
